css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  position: relative;
  background-color: black;
  height: 100%;
  /*background-image: url('../img/spaceship.jpg');*/
  background-repeat: no-repeat;
  background-position: bottom;
  overflow-x: hidden;
}



nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  min-height: 8vh;
  background-color: black;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.logo {
  color: #d4d4d4;
  text-transform: uppercase;
  letter-spacing: 7px;
  font-size:22px;
}

.nav-links {
  display: flex;
  justify-content: space-around;
  width: 40%;
}

.nav-links li{
  list-style-type: none;
}

.nav-links a{
  color: #d4d4d4;
  letter-spacing: 2px;
  text-decoration: none;
}

.nav-links li a:hover{
  color: #fdcc01;
}

.burger {
  display: none;
}

.burger div{
  width: 30px;
  height: 2px;
  background-color: #d4d4d4;
  margin: 5px;
  cursor: pointer;
}


.banner {
  width:100%;
  max-width: 100%;
  height: 400px;
  background-color: #d4d4d4;
}

.banner img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  filter: grayscale(30%) blur(2px);
}

.container {
  display: flex;
  align-items: center;
  width: 100%;
  height: auto;
  /*max-height: 900px;*/
  /*background-color: red;*/
  flex-direction: column;
  margin-top: 100px;
}

.container #contact_wapper{
  display: flex;
  align-items: center;
  width: 80%;
  height: auto;
  flex-direction: column;
  margin-top: 100px;
  background-color: rgb(240, 240, 242);
}


.picture_wrapper {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  height: 900px;
  text-align: center;
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translate3d(0,40px,0)
  }

  to {
    transform: translate3d(0,0,0);
    opacity: 1
  }
}

@keyframes LightUp {
  from {
    opacity: 0;
  }

  to {
    opacity: 1
  }
}



/* Centered text */
.centered {
  position: relative;
  top: 30%;
  left: 0;
  color: #d4d4d4;
  font-size: 25px;
  /*transform: translate(-80%, -50%);*/
}

.centered h4 {
  font-size: 50px;
  font-style: oblique;
  letter-spacing: 3px;
  animation: fadeInUp 1s ease-in;
}

.centered p{
  animation: LightUp 4s ease-in;
  font-size: 15px;
  line-height: 1.5;
}

#myVideo {
  opacity: 1;
}

.guarantee {
  background-color: black;
  /*background-image: url(../img/galaxy.gif);*/
  /*background-repeat: no-repeat;*/
  /*background-size: 1000px;*/
  margin-top: 10px;
  height: 700px;
  width: 100%;
}

.pledge {
  color: rgba(255, 215, 0, 0.82);
  position: relative;
  padding: 100px;
  text-align: center;
  line-height: 1.6;
}

.pledge h3 {
  font-size: 100px;
  font-style: oblique;
  letter-spacing: 3px;
}

.pledge table {
  margin-top: 20px;
  border-spacing: 15px 50px;
  margin-left: auto;
  margin-right: auto;
  color: #ffffff;
  text-align: center;
}

.commitmentDesHide{
  visibility: hidden;
}

.commitmentDes {
  visibility: visible;

  color: #e7e7e7;
}

/* Tiny Slider*/


/* Hide the images by default */
.mySlides {
  display: none;
  align-items: center;
  margin-left: 20%;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #343434;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

/* Slider Active */
.active, .dot:hover {
  background-color: rgba(241, 237, 229, 0.83);
}


/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}



.roomInfo{
  display: flex;
  /*background-color: rgba(255, 255, 255, 0.15);*/
  width: 80%;
  max-width: 80%;
  height: 400px;
  max-height: 400px;
  margin-top: 50px;
  opacity: 1;
}

.roomInfo img {
  position: relative;
  left: 0;
  margin: 10px;
  max-height: 380px;
  max-width: 450px;
}

.roomDescription {
  margin-left: 20px;
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  position: relative;
  color: #d4d4d4;
  max-width: 50%;
}

.roomDescription h4 {
  margin-left: 0;
  margin-top: 20px;
  letter-spacing: 2px;
  line-height: 3;
  /*text-transform: uppercase;*/
}

.roomDescription h3 {
  margin-left: 40%;
  margin-top: 50px;
  letter-spacing: 5px;
  color: #fdcc01;
  text-transform: uppercase;
}

.roomDescription button{
  width: auto;
  height: auto;
  margin-left: auto;
  margin-right:auto;

  display:inline-block;

  text-decoration:none;

  color:rgba(28, 190, 131, 1);
  background-color:transparent;
  border:1px solid rgba(28, 190, 131, 1);
  border-radius:100px;
  padding: .3em 1.2em;

  background-size: 200% 100%;
  background-image: linear-gradient(to right, transparent 50%, rgba(28, 190, 131, 1) 50%);
  transition: background-position .3s cubic-bezier(0.19, 1, 0.22, 1) .1s, color .5s ease 0s, background-color .5s ease;
}

.roomDescription button:hover{
  color:rgba(255, 255, 255, 1);
  background-color:rgba(28, 190, 131, 1);
  background-position: -100% 100%;
}

.contactUs {
  margin-top: 50px;
  text-align: center;
  color: #fff;
  font-weight: 900;

}
.contactUs *{
  color: white;
  font-weight: 900;
}


footer {
  position: relative;
  margin: 0 auto;
  left: 0;
  bottom: 0;
  height: 10vh;
  width: 100%;
  background-color: black;
  color: white;
  text-align: center;
  padding:20px;
}


footer p{
  margin-top: 20px;
  line-height: 1.6;
}

footer p *{

  letter-spacing: 2px;
  margin-left: 20px;
  text-decoration: none;
  color: #cccccc;
}

@media only screen and (max-width: 768px) {

  body {
    overflow-x: hidden;
  }

  .nav-links {
    position: absolute;
    right: 0;
    height: 92vh;
    top: 8vh;
    /*background-color: black;*/
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    transform: translate(100%);
    transition: 0.5s ease-in;
  }

  .burger {
    display: block;
   }

  .nav-links li {
    opacity: 0;
  }

}

.nav-active {
  transform: translateX(0%);
}

